tests/wordpress/fail/plugins/backwpup/backwpup.php
<?php
//Set plugin dirname
define('BACKWPUP_PLUGIN_BASEDIR', dirname(plugin_basename(__FILE__)));
define('BACKWPUP_PLUGIN_BASEURL',plugins_url('',__FILE__));
//Set Plugin Version
define('BACKWPUP_VERSION', '2.1.4');
//Set Min Wordpress Version
define('BACKWPUP_MIN_WORDPRESS_VERSION', '3.1');
//Set User Capability
define('BACKWPUP_USER_CAPABILITY', 'export');
